added: parameters for budget_api and documentation
fixed the endpoint /api/v1/budget_mis/ for fetching budget data
